Sunshot binary is created.

--- a/PIOsimHD-Maint/path.rc
+++ b/PIOsimHD-Maint/path.rc
@@ -16,7 +16,7 @@ DOCF="$PFAD/PIOsimHD-Doc"
 MODELF="$PFAD/PIOsimHD-Model"
 TRACECONVERTERF="$PFAD/HDTraceConverter"
 TRACEF="$PFAD/HDTraceFormat"
-HDJUMPSHOT="$PFAD/HDJumpshot"
+SUNSHOTF="$PFAD/HDJumpshot"
 
 if [[ ! -e  "$SIMF" ]] ; then
 	echo "$SIMF" does not exist
