* Introduced threading * Added support for using as library

--- a/PowerTracer/src/Makefile.am
+++ b/PowerTracer/src/Makefile.am
@@ -2,10 +2,15 @@ include $(top_srcdir)/common.am
 
 bin_PROGRAMS = pt
 
-pt_SOURCES = pt.c conf.c trace.c LMG.c serial.c 
+pt_SOURCES = pt.c conf.c trace.c tracing.c LMG.c serial.c
 pt_CFLAGS = $(HDTWLIB_CFLAGS)
 pt_LDADD = $(HDTWLIB_LDADD)
-pt_LDFLAGS = $(HDTWLIB_LDFLAGS) $(HDTWLIB_LIBS)
+pt_LDFLAGS = $(HDTWLIB_LDFLAGS) $(HDTWLIB_LIBS) -lpthread
+
+lib_LTLIBRARIES = libPT.la
+
+libPT_la_SOURCES = pt.c conf.c trace.c tracing.c LMG.c serial.c
+libPT_la_CFLAGS = -DBUILD_LIB $(HDTWLIB_CFLAGS)
 
 
 ######################
