* Restructured files and directories * Added generated files to svn:ignore

--- a/PowerTracer/.project
+++ b/PowerTracer/.project
@@ -3,6 +3,7 @@
 	<name>PowerTracer</name>
 	<comment></comment>
 	<projects>
+		<project>HDTraceWritingCLibrary</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
