--- a/PerformanceTracingLibrary/Makefile.am
+++ b/PerformanceTracingLibrary/Makefile.am
@@ -10,7 +10,7 @@ include_HEADERS = $(INC_DIR)/*.h
 
 doc: devdoc apidoc
 
-doxyINPUT = $(SRC_DIR) $(INC_DIR) include
+doxyINPUT = $(SRC_DIR) $(INC_DIR)
 
 devdoc: force
 	OUTDIR=$(DOC_DIR) INPUT="$(doxyINPUT)" doxygen $(top_srcdir)/Doxyfile
