--- a/HDMPIwrapper/lib/Makefile.am
+++ b/HDMPIwrapper/lib/Makefile.am
@@ -2,5 +2,5 @@ include $(top_srcdir)/config/common.am
 
 lib_LTLIBRARIES = libhdTraceMPIWrapper.la
 
-libhdTraceMPIWrapper_la_SOURCES = ../src/hdTraceMPIWrapper.c
+libhdTraceMPIWrapper_la_SOURCES = $(SRC_DIR)/hdTraceMPIWrapper.c
 libhdTraceMPIWrapper_la_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS)
