--- a/PowerTracer/configure.ac
+++ b/PowerTracer/configure.ac
@@ -1,8 +1,11 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
+#
+# $Id$
+#
 
 AC_PREREQ(2.61)
-AC_INIT([PowerTracer], [0svn20090617], [stephan.krempel@pvs.informatik.uni-heidelberg.de])
+AC_INIT([PowerTracer], [0.9], [stephan.krempel@pvs.informatik.uni-heidelberg.de])
 AC_CONFIG_SRCDIR([src/pt.c])
 AC_CONFIG_HEADER([src/pkgconfig.h])
 
