--- a/HDMPIwrapper/lib/Makefile.am
+++ b/HDMPIwrapper/lib/Makefile.am
@@ -2,5 +2,6 @@ include $(top_srcdir)/config/common.am
 
 lib_LTLIBRARIES = libhdTraceMPIWrapper.la
 
-libhdTraceMPIWrapper_la_SOURCES = $(SRC_DIR)/hdTraceMPIWrapper.c
+# do not use $(SRC_DIR) here since hdTraceMPIWrapper.c is build in build tree
+libhdTraceMPIWrapper_la_SOURCES = $(top_builddir)/src/hdTraceMPIWrapper.c
 libhdTraceMPIWrapper_la_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS)
