* Changed API of PTL to use visible pointers instead of pointers hidden by typedefs * Adjusted everything else to the API change * Changed Key defines to enable/disable statistics in MPIwrapper from USE_* to ENABLE_*

--- a/HDMPIwrapper/configure.ac
+++ b/HDMPIwrapper/configure.ac
@@ -148,7 +148,7 @@ AC_ARG_WITH(hdperftrace,
        CFLAGS="$CFLAGS -I$withval/include"
        CPPFLAGS="$CPPFLAGS -I$withval/include"
 
-       AC_DEFINE(USE_PERFORMANCE_TRACE, 1, [Define if performance trace shall be enabled])
+       AC_DEFINE(ENABLE_PERFORMANCE_TRACE, 1, [Define if performance trace shall be enabled])
 
        LDFLAGS="-L$withval/lib $LDFLAGS"
        AC_TRY_LINK([
@@ -167,7 +167,7 @@ AC_ARG_WITH(hdpowertrace,
        CFLAGS="$CFLAGS -I$withval/include"
        CPPFLAGS="$CPPFLAGS -I$withval/include"
 
-       AC_DEFINE(USE_POWER_TRACE, 1, [Define if power trace shall be enabled])
+       AC_DEFINE(ENABLE_POWER_TRACE, 1, [Define if power trace shall be enabled])
 
        LDFLAGS="-L$withval/lib $LDFLAGS"
        AC_TRY_LINK([
