--- a/PVFS2/2.8.1/Makefile.in
+++ b/PVFS2/2.8.1/Makefile.in
@@ -1058,6 +1058,7 @@ install:: all install_doc
 	install -m 644 $(srcdir)/include/pvfs2-encode-stubs.h $(includedir)
 	install -m 644 $(srcdir)/include/pvfs2-hint.h $(includedir)
 	install -m 644 $(srcdir)/include/pvfs2-compat.h $(includedir)
+	install -m 644 $(srcdir)/src/common/misc/pint-event-hd-client.h $(includedir)
 
 	install -d $(libdir)
 ifneq (,$(LIBRARIES_STATIC))
