Added install procedure for project-description-merger.py

--- a/HDMPIwrapper/Makefile.am
+++ b/HDMPIwrapper/Makefile.am
@@ -21,3 +21,6 @@ src/hdTraceMPIWrapper.c: $(SRC_DIR)/hdTraceMPIWrapper.src.c $(INC_DIR)/hdMPITrac
 	@cat $(SRC_DIR)/hdTraceMPIWrapper.src.c > src/hdTraceMPIWrapper.c || exit 1
 	@cat $(INC_DIR)/hdMPITracer.h.in > include/hdMPITracer.h || exit 1
 	@$(top_srcdir)/scripts/create_sim-wrapper.py $(top_srcdir)/interesting_funcs.h src/hdTraceMPIWrapper.c  include/hdMPITracer.h include/hdMPITracerCodeLocator.h
+
+install-data-local:
+	@install -D $(top_srcdir)/scripts/project-description-merger.py $(prefix)/bin/project-description-merger.py
