* Renamed everything but Project itself (PTL* -> RUT*, ptl_ -> rut_, PerfTrace -> UtilTrace)

--- a/branches/ResourcesUtilizationTracingLibrary/PerformanceTracingLibrary/configure.ac
+++ b/branches/ResourcesUtilizationTracingLibrary/PerformanceTracingLibrary/configure.ac
@@ -4,9 +4,9 @@
 # $Id$
 
 AC_PREREQ(2.61)
-AC_INIT([PerformanceTracingLibrary], [0svn20090617], [stephan.krempel@pvs.informatik.uni-heidelberg.de])
-AC_CONFIG_SRCDIR([src/PTL.c])
-AC_CONFIG_HEADER([src/PTL-pkg.h])
+AC_INIT([ResourcesUtilizationTracingLibrary], [0svn20090617], [stephan.krempel@pvs.informatik.uni-heidelberg.de])
+AC_CONFIG_SRCDIR([src/RUT.c])
+AC_CONFIG_HEADER([src/RUT-pkg.h])
 
 # Initialize automake
 AM_INIT_AUTOMAKE([-Wall -Werror foreign 1.10])
