--- a/branches/ResourcesUtilizationTracingLibrary/PerformanceTracingLibrary/lib/Makefile.am
+++ b/branches/ResourcesUtilizationTracingLibrary/PerformanceTracingLibrary/lib/Makefile.am
@@ -2,7 +2,7 @@
 
 include $(top_srcdir)/common.am
 
-lib_LTLIBRARIES = libPTL.la
+lib_LTLIBRARIES = libRUT.la
 
-libPTL_la_SOURCES = $(SRC_DIR)/PTL.c $(SRC_DIR)/tracing.c
-libPTL_la_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS) $(GLIBTOP_CFLAGS) $(HDTWLIB_CFLAGS)
+libRUT_la_SOURCES = $(SRC_DIR)/RUT.c $(SRC_DIR)/tracing.c
+libRUT_la_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS) $(GLIBTOP_CFLAGS) $(HDTWLIB_CFLAGS)
