--- a/MPICH2/mpich2-1.0.8p1/src/env/mpif77.in
+++ b/MPICH2/mpich2-1.0.8p1/src/env/mpif77.in
@@ -314,7 +314,7 @@ if [ "$linking" = yes ] ; then
         # Prepend the path for the shared libraries to the library list
         mpilibs="$FC_LINKPATH_SHL$libdir $mpilibs"
     fi
-    $Show $FC $FFLAGS $LDFLAGS $allargs -I$includedir -L$libdir $mpilibs $MPI_OTHERLIBS
+    $Show $FC $FFLAGS $LDFLAGS $allargs -I$includedir -L$libdir $mpilibs $MPI_OTHERLIBS $mpilibs $MPI_OTHERLIBS $mpilibs    
     rc=$?
 else
     $Show $FC $FFLAGS $allargs -I$includedir
