--- a/MPICH2/mpich2-1.0.8p1/src/env/mpif90.bash.in
+++ b/MPICH2/mpich2-1.0.8p1/src/env/mpif90.bash.in
@@ -339,7 +339,7 @@ if [ "$linking" = yes ] ; then
         # Prepend the path for the shared libraries to the library list
         mpilibs="$F90_LINKPATH_SHL$libdir $mpilibs"
     fi
-    $Show $F90 $F90FLAGS $LDFLAGS "${allargs[@]}" $F90INCDIRS $F90MODDIRS -L$libdir $F90MODLIBS $mpilibs $MPI_OTHERLIBS
+    $Show $F90 $F90FLAGS $LDFLAGS "${allargs[@]}" $F90INCDIRS $F90MODDIRS -L$libdir $F90MODLIBS $mpilibs $MPI_OTHERLIBS $mpilibs $MPI_OTHERLIBS $mpilibs
     rc=$?
 else
     $Show $F90 $F90FLAGS "${allargs[@]}" $F90INCDIRS $F90MODDIRS
