* All changes needed for the renaming of the Performance Tracing Library to Resources Utilization Tracing Library   ATTENTION: The name of all functions now starts with rut_ instead of ptl_

--- a/HDMPIwrapper/configure.ac
+++ b/HDMPIwrapper/configure.ac
@@ -140,40 +140,40 @@ AC_TRY_LINK([
 		[return (0);], , [AC_MSG_ERROR("Cannot link with hdtrace")])
 
 dnl set the performancetrace library path
-AC_ARG_WITH(hdperftrace,
-[  --with-hdperftrace=path         Use HDPerformanceTrace library installed in "path"],
+AC_ARG_WITH(hdutiltrace,
+[  --with-hdutiltrace=path         Use libRUT installed in "path"],
     if test "x$withval" = "xyes" ; then
-           AC_MSG_ERROR(--with-hdperftrace must be given a pathname)
+           AC_MSG_ERROR(--with-hdutiltrace must be given a pathname)
     else
        CFLAGS="$CFLAGS -I$withval/include"
        CPPFLAGS="$CPPFLAGS -I$withval/include"
 
-       AC_DEFINE(ENABLE_PERFORMANCE_TRACE, 1, [Define if performance trace shall be enabled])
+       AC_DEFINE(ENABLE_UTILIZATION_TRACE, 1, [Define if resources utilization tracing shall be enabled])
 
        LDFLAGS="-L$withval/lib $LDFLAGS"
        AC_TRY_LINK([
-		#include <PTL.h>
+		#include <RUT.h>
 		],
-		[return (0);], , [AC_MSG_ERROR("Cannot link with performance trace library")])   
+		[return (0);], , [AC_MSG_ERROR("Cannot link with libRUT")])   
     fi
 )
 
 dnl set the power trace library path
 AC_ARG_WITH(hdpowertrace,
-[  --with-hdpowertrace=path         Use HDPowerTrace library installed in "path"],
+[  --with-hdpowertrace=path         Use libPT installed in "path"],
     if test "x$withval" = "xyes" ; then
            AC_MSG_ERROR(--with-hdpowertrace must be given a pathname)
     else
        CFLAGS="$CFLAGS -I$withval/include"
        CPPFLAGS="$CPPFLAGS -I$withval/include"
 
-       AC_DEFINE(ENABLE_POWER_TRACE, 1, [Define if power trace shall be enabled])
+       AC_DEFINE(ENABLE_POWER_TRACE, 1, [Define if power tracing shall be enabled])
 
        LDFLAGS="-L$withval/lib $LDFLAGS"
        AC_TRY_LINK([
 		#include <pt.h>
 		],
-		[return (0);], , [AC_MSG_ERROR("Cannot link with power trace library")])   
+		[return (0);], , [AC_MSG_ERROR("Cannot link with libPT")])   
     fi
 )
 
