--- a/PVFS2/2.8.1/pvfs2-config.h.in
+++ b/PVFS2/2.8.1/pvfs2-config.h.in
@@ -128,7 +128,7 @@
 /* Define if strerror_r is GNU-specific */
 #undef HAVE_GNU_STRERROR_R
 
-/* Define if HDTrace library is used */
+/* Define if HDRut library is used */
 #undef HAVE_HDPTL
 
 /* Define if HDTrace library is used */
