#4: Linken gegen GLIB2
Editieren der .am Files und Anpassen der configure.ac.
Weiter wurde ein prepare Skript hinzukopiert.

--- a/PowerTracer/bin/Makefile.am
+++ b/PowerTracer/bin/Makefile.am
@@ -5,9 +5,9 @@ include $(top_srcdir)/common.am
 bin_PROGRAMS = pt
 
 pt_SOURCES = $(SRC_DIR)/ptmain.c $(SRC_DIR)/pt.c $(SRC_DIR)/tracing.c $(SRC_DIR)/trace.c $(SRC_DIR)/conf.c $(SRC_DIR)/LMG.c $(SRC_DIR)/serial.c
-pt_CFLAGS = -I$(INC_DIR) $(HDTWLIB_CFLAGS)
+pt_CFLAGS = -I$(INC_DIR) $(HDTWLIB_CFLAGS) $(GLIB_CFLAGS)
 pt_LDADD = $(HDTWLIB_LDADD)
-pt_LDFLAGS = $(HDTWLIB_LDFLAGS) $(HDTWLIB_LIBS) -lpthread
+pt_LDFLAGS = $(HDTWLIB_LDFLAGS) $(HDTWLIB_LIBS) -lpthread $(GLIB_LIBS)
 
 
 ######################
