--- a/PowerTracer/examples/Makefile.am
+++ b/PowerTracer/examples/Makefile.am
@@ -4,7 +4,7 @@ include $(top_srcdir)/common.am
 
 noinst_PROGRAMS = ptLoop
 
-ptLoop_CFLAGS = -I$(INC_DIR) $(HDTWLIB_CFLAGS)
+ptLoop_CFLAGS = -I$(SRC_DIR) -I$(INC_DIR) $(HDTWLIB_CFLAGS)
 ptLoop_LDADD = -lpt $(HDTWLIB_LDADD)
 ptLoop_LDFLAGS = $(HDTWLIB_LDFLAGS) $(HDTWLIB_LIBS) $(GLIB_LIBS) -L$(LIB_DIR)/.libs -static
 
