--- a/PowerTracer/lib/Makefile.am
+++ b/PowerTracer/lib/Makefile.am
@@ -4,5 +4,5 @@ include $(top_srcdir)/common.am
 
 lib_LTLIBRARIES = libpt.la
 
-libpt_la_SOURCES = $(SRC_DIR)/pt.c $(SRC_DIR)/tracing.c $(SRC_DIR)/trace.c $(SRC_DIR)/conf.c $(SRC_DIR)/LMG.c $(SRC_DIR)/serial.c
-libpt_la_CFLAGS = -I$(INC_DIR) $(HDTWLIB_CFLAGS) $(GLIB_CFLAGS)
+libpt_la_SOURCES = $(SRC_DIR)/pt.c $(SRC_DIR)/tracing.c $(SRC_DIR)/trace.c $(SRC_DIR)/conf.c $(SRC_DIR)/LMG.c $(SRC_DIR)/serial.c $(SRC_DIR)/topo.c
+libpt_la_CFLAGS = -I$(SRC_DIR) -I$(INC_DIR) $(HDTWLIB_CFLAGS) $(GLIB_CFLAGS)
