different small fixes...

--- a/HDPowerEstimation/.project
+++ b/HDPowerEstimation/.project
@@ -3,6 +3,7 @@
 	<name>HDPowerConsumption</name>
 	<comment></comment>
 	<projects>
+		<project>HDTraceFormat</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
